--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -117,22 +117,30 @@ th {
             <hr>
           </div>
         </div>
-
-        <div class="col-lg-8 col-md-12 content">
-        <h3>Projects</h3>
+        
+        <div class="row justify-content-center">
+          <div class="col-lg-8 col-md-12 content">
+            
+            <h3>Projects</h3>
+          </div>
         </div>
-
+        
+        
         {% include projects.html %}
-
-        <div class="col-lg-8 col-md-12 content">
+        
         <hr>
-        <h3>Project Details</h3>
+        <div class="row justify-content-center">
+          <div class="col-lg-8 col-md-12 content">
+            
+            <h3>Project Details</h3>
+          </div>
         </div>
-
+        
         {% include details.html %}
-
+        
       </div>
     </div>
+
 
     
 
