bold detail headers

--- a/_includes/details.html
+++ b/_includes/details.html
@@ -11,12 +11,12 @@
         <ul>
           <li>Group members: {{ project.names }}</li>
         </ul>
-        <p>Materials:</p>
+        <p><b>Materials:</b></p>
         <ul>
           <li><a href="{{ project.website }}">Website</a></li>
           <li><a href="{{ project.repo }}">Project GitHub Repository</a></li>
         </ul>
-        <p>Abstract: {{ project.abstract }}</p>
+        <p><b>Abstract:</b> {{ project.abstract }}</p>
         {% endif %}
         {% endfor %}
         {% endfor %}
