--- a/_includes/details.html
+++ b/_includes/details.html
@@ -14,7 +14,9 @@
         <p><b>Materials:</b></p>
         <ul>
           <li><a href="{{ project.website }}">Website</a></li>
-          <li><a href="{{ project.repo }}">Project GitHub Repository</a></li>
+          <li><a href="{{ project.repo }}">Project GitHub
+          Repository</a></li>
+          <li><a href="{{ project.report }}">Project Report</a></li>
         </ul>
         <p><b>Abstract:</b> {{ project.abstract }}</p>
         {% endif %}
