--- a/_includes/details.html
+++ b/_includes/details.html
@@ -14,9 +14,9 @@
         <p><b>Materials:</b></p>
         <ul>
           <li><a href="{{ project.website }}">Website</a></li>
-          <li><a href="{{ project.repo }}">Project GitHub
+          <li><a href="https://github.com/DSC-Capstone/projects-2020-2021/tree/main/projects/{{ project.num }}/README.md">Project GitHub
           Repository</a></li>
-          <li><a href="{{ project.report }}">Project Report</a></li>
+          <li><a href="reports/{{ project.num }}.pdf">Project Report</a></li>
         </ul>
         <p><b>Abstract:</b> {{ project.abstract }}</p>
         {% endif %}
